Causeview Package Complete/ant script/retrieveUnpackaged/objects/Volunteer_Appreciation__c.object
<CustomObject>
    <fields>
        <fullName>Appreciation_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The date the appreciation was awarded/given</inlineHelpText>
        <label>Appreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appreciation_Type__c</fullName>
        <label>Appreciation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Appreciations</relationshipLabel>
        <relationshipName>Volunteer_Appreciations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Appreciation</label>
    <nameField>
        <displayFormat>VAP-{00000000}</displayFormat>
        <label>Volunteer Appreciation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Appreciations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>